# drvg

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  build.sh  rvg.pyi
Configs/: HardDemo.xml  env1.xml  env2.xml  env3.xml  env4.xml  env5.xml  env7.xml  manimConfig.xml  manimConfig1.xml  manimConfig2.xml  mapfixedStartAndGoalHardSmall1.xml  mapfixedStartAndGoalHardSmall3.xml  mapfixedStartAndGoalSmall0.xml  mapfixedStartAndGoalSmall1.xml  mapfixedStartAndGoalSmall2.xml  pacman.xml  polygonTest.xml
Configs-backup/: dummyConfig.xml  env1.xml  env2.xml  env4.xml  env6.xml  env7.xml  env8.xml  map0.xml  map1.xml  map2.xml  map3.xml  map4.xml  map5.xml  map6.xml  map7.xml  map8.xml  map9.xml  mapTest.xml  mapfixedStartAndGoal0.xml  mapfixedStartAndGoal1.xml  mapfixedStartAndGoal2.xml  mapfixedStartAndGoal3.xml  mapfixedStartAndGoal4.xml  mapfixedStartAndGoal5.xml  mapfixedStartAndGoal6.xml  mapfixedStartAndGoal7.xml  mapfixedStartAndGoal8.xml  mapfixedStartAndGoal9.xml  mapfixedStartAndGoalHard0.xml  mapfixedStartAndGoalHard1.xml  mapfixedStartAndGoalHard2.xml  mapfixedStartAndGoalHard3.xml  mapfixedStartAndGoalHard4.xml  mapfixedStartAndGoalHard5.xml  mapfixedStartAndGoalHard6.xml  mapfixedStartAndGoalHard7.xml  mapfixedStartAndGoalHard8.xml  mapfixedStartAndGoalHard9.xml  mapfixedStartAndGoalSmall0.xml  mapfixedStartAndGoalSmall1.xml  (+29 more)
DynamicVisibilityGraph/: DynamicRVG.cpp  DynamicRVG.h  DynamicTVG.cpp
Main/Debug/: mainCGALPolygonGenerationDebug.cpp  mainDebugAVX.cpp  mainDebugAVXPolygonChecking.cpp  mainDebugOverlap.cpp
Main/DynamicRVG/: mainDebugCameraOffset.cpp  mainDebugDynamicRVG.cpp  mainDebugFullPath.cpp  mainDebugRobotStartPose.cpp  mainDebugScanVisibleArea.cpp  mainDebugSingleIteration.cpp
Main/Experiments/: mainDrawConvergence.cpp  mainDrawMap.cpp  mainMultiQuery.cpp  mainOMPLConfigRun.cpp  mainOMPLNarrowPassageTest.cpp  mainRVGConfigRun.cpp  mainRVG_OMPL_Comparison.cpp  mainRVG_OMPL_ComparisonNarrowPassage.cpp  mainSBRVGConfigRun.cpp  mainWeights.cpp
Main/OMPLDebug/: mainDebugOMPL.cpp  mainDebugRRTStar.cpp
Main/VisibilityGraphDebug/: mainDebugBorder.cpp  mainDebugConvexDecomposition.cpp  mainDebugGraphUtilPolygonDraw.cpp  mainDebugIntersection.cpp  mainDebugLayer.cpp  mainDebugMinkowskiSum3.cpp  mainDebugMinkowskiSum5.cpp  mainDebugPolygonSet2.cpp  mainDebugPolygonWithHoles.cpp  mainDebugSegmentsViewer.cpp  mainDebugVertex.cpp  mainDebugVertexSet.cpp  mainDebugVerticalDecomposition.cpp  mainDebugVisibility3.cpp  mainDebugVisibilityGraph.cpp
OMPL/: OMPLEnv.cpp
Python/: bindings.cpp  graph.h  layer.h  polygon.h  vertex.h  visibility_graph.h
Utils/: Pragma.h  Utils.h
VisibilityGraph/: Drawer.cpp  Drawer.h  Graph.cpp  Graph.h  GraphUtils.cpp  GraphUtils.h  Layer.cpp  Layer.h  MapGenerator.cpp  Polygon.cpp  Polygon.h  SamplingBasedRVG.cpp  SamplingBasedRVG.h  Utils.h  Vertex.cpp  Vertex.h  VisibilityCheck.h  VisibilityGraph.cpp  VisibilityGraph.h
cmake/: FindCoinHSL.cmake  FindTracy.cmake  Findompl.cmake  LoadLibs.cmake
code/: CMakeLists.txt  layer.py  pacman.py  pyproject.toml  setup.py
code/Configs/: EasyDemo.xml  corridor.xml  corridor_star.xml  dynamic_rvg_plan_iteration_3.xml  env3.xml  env5.xml  env7.xml  env8.xml  manimConfig.xml  manimConfig1.xml  manimConfig2.xml  mapfixedStartAndGoalHardSmall0.xml  mapfixedStartAndGoalHardSmall2.xml  mapfixedStartAndGoalHardSmall4.xml  mapfixedStartAndGoalHardSmall5.xml  mapfixedStartAndGoalHardSmall6.xml  mapfixedStartAndGoalHardSmall7.xml  mapfixedStartAndGoalHardSmall8.xml  mapfixedStartAndGoalHardSmall9.xml  mapfixedStartAndGoalSmall3.xml  mapfixedStartAndGoalSmall4.xml  mapfixedStartAndGoalSmall5.xml  mapfixedStartAndGoalSmall6.xml  mapfixedStartAndGoalSmall7.xml  mapfixedStartAndGoalSmall8.xml  mapfixedStartAndGoalSmall9.xml  maprandomStartAndGoalHardSmall0.xml  maprandomStartAndGoalHardSmall1.xml  maprandomStartAndGoalHardSmall2.xml  maprandomStartAndGoalHardSmall3.xml  maprandomStartAndGoalHardSmall4.xml  maprandomStartAndGoalHardSmall5.xml  maprandomStartAndGoalHardSmall6.xml  maprandomStartAndGoalHardSmall7.xml  maprandomStartAndGoalHardSmall8.xml  maprandomStartAndGoalHardSmall9.xml  maprandomStartAndGoalSmall0.xml  maprandomStartAndGoalSmall1.xml  maprandomStartAndGoalSmall2.xml  maprandomStartAndGoalSmall3.xml  (+8 more)
code/DynamicVisibilityGraph/: DynamicRVG.cpp  DynamicRVG.h
code/OMPL/: CollisionDetection.cpp  CollisionDetection.h  OMPLEnv.cpp  OMPLEnv.h
code/Python/: bindings.cpp  graph.h  polygon.h  utils.h  visibility_graph.h
code/Utils/: Timer.h  Utils.cpp  Utils.h
code/VisibilityGraph/: Edge.cpp  Edge.h  Graph.h  Layer.cpp  Layer.h  MapGenerator.cpp  MapGenerator.h  Polygon.cpp  Polygon.h  RectangleObstacleMapGenerator.cpp  RectangleObstacleMapGenerator.h  RotationMinimization.h  Vertex.cpp  Vertex.h  VisibilityGraph.cpp  VisibilityGraph.h
code/cmake/: BuildTracy.cmake  FindCGAL.cmake  FindGLAD.cmake  FindIPOPT.cmake  FindMatplot++.cmake  FindQGLViewer.cmake  FindTINYXML2.cmake  Findompl.cmake  Findpybind11test.cmake  LoadLibs.cmake
code/python-example/: test_graph_bindings.py  test_vertex_hash.py  time_vs_cores.py
code/scripts/: benchmark.py  benchmark_relative.py  benchmark_relative_hard.py  benchmark_relative_together.py  draw_3d_graph.py  (+7 more)
docs/: claude_input.md
latex/: .gitignore  compile.ps1  compile.sh  main.tex  references.bib
python-example/: debug_python_bindings.py  rvg_basic_usage.py  test_graph_bindings.py  time_vs_cores.py
scripts/: benchmark_hard.py  comparison.py  comparison_hard.py  debug_python_bindings.py  draw_3d_graph.py  draw_bounding_polygons.py  draw_pacman.py  find_largest_convex_component.py  plotVertiecs.py  ratio.py  runAITStarGapTest.sh  runGapTest.sh  runOMPLConfigs.sh  runRRTStarGapTest.sh  runRVGConfig.sh  runRVGConfigs.sh  runRVGGapTest.sh  runRVG_OMPL_RatioTest.sh  runRVG_OMPL_RatioTest_18.sh  runRVG_OMPL_RatioTest_180.sh  runRVG_OMPL_RatioTest_36.sh  runRVG_OMPL_RatioTest_360.sh  runRVG_OMPL_RatioTest_72.sh  runRVG_OMPL_RatioTest_8.sh  runRVG_OMPL_RatioTest_90.sh  test.py  time_vs_cores.py
(+36 files in other folders)
