CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(RotationalVisibilityGraph)

#COMPILE SETTINGS
SET(CMAKE_BUILD_TYPE Release CACHE STRING "Compiler optimization level")
SET_PROPERTY(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS Debug Release)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake/")
IF (CMAKE_BUILD_TYPE STREQUAL "Debug")
    MESSAGE(STATUS "Build type: Debug")
    ADD_COMPILE_DEFINITIONS(_GLIBCXX_DEBUG=1)
    ADD_COMPILE_DEFINITIONS(_GLIBCXX_USE_CXX11_ABI=1)
    SET(CMAKE_CXX_FLAGS "-fopenmp -O0 -Wall -fPIC -std=c++17 -Wno-unused-function -Wno-unused-local-typedefs -fsanitize=address ${CMAKE_CXX_FLAGS}")
ELSE ()
    MESSAGE(STATUS "Build type: Release")
    ADD_COMPILE_DEFINITIONS(_GLIBCXX_USE_CXX11_ABI=1)
    SET(CMAKE_CXX_FLAGS "-fopenmp -O3 -Wall -fPIC -std=c++17 -Wno-unused-function -Wno-unused-local-typedefs ${CMAKE_CXX_FLAGS}")
ENDIF ()
SET(CMAKE_CONFIGURATION_TYPES ${CMAKE_BUILD_TYPE})

#C++11 ABI
OPTION(USE_CXX11_ABI "Whether to use C++11's ABI" ON)
IF (NOT ${USE_CXX11_ABI})
    MESSAGE(STATUS "Disabling C++11's ABI")
    SET(CMAKE_CXX_FLAGS "-D_GLIBCXX_USE_CXX11_ABI=0 ${CMAKE_CXX_FLAGS}")
ELSE ()
    MESSAGE(STATUS "Enabling C++11's ABI")
ENDIF ()

#AVX512/AVX2
INCLUDE(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-mavx2" COMPILER_SUPPORTS_AVX2)
IF(COMPILER_SUPPORTS_AVX2)
    SET(CMAKE_CXX_FLAGS "-mavx2 -march=native ${CMAKE_CXX_FLAGS}")
    MESSAGE(STATUS "AVX2 enabled")
ELSE()
    MESSAGE(STATUS "AVX2 not supported")
ENDIF()


#PYTHON
IF (DEFINED PYTHON_EXECUTABLE)
    MESSAGE(STATUS "Python executable: ${PYTHON_EXECUTABLE}")
    ADD_DEFINITIONS(-DPYTHON_EXECUTABLE="${PYTHON_EXECUTABLE}")
    GET_FILENAME_COMPONENT(Python_ROOT_DIR ${PYTHON_EXECUTABLE} DIRECTORY)
    GET_FILENAME_COMPONENT(Python_ROOT_DIR ${Python_ROOT_DIR} DIRECTORY)  # One level up
    SET(Python_ROOT_DIR "${Python_ROOT_DIR}" CACHE PATH "Root directory of Python")
    SET(Python_EXECUTABLE "${PYTHON_EXECUTABLE}" CACHE FILEPATH "Python interpreter")

    FIND_PACKAGE(Python REQUIRED COMPONENTS Interpreter Development)
    MESSAGE(STATUS "Python version: ${Python_VERSION}")
    MESSAGE(STATUS "Python library: ${Python_LIBRARIES}")
    MESSAGE(STATUS "Python include dirs: ${Python_INCLUDE_DIRS}")
    message(STATUS "Python_ROOT_DIR: ${Python_ROOT_DIR}")
ELSE (DEFINED PYTHON_EXECUTABLE)
    IF (POLICY CMP0094)  # https://cmake.org/cmake/help/latest/policy/CMP0094.html
        CMAKE_POLICY(SET CMP0094 NEW)  # FindPython should return the first matching Python
    ENDIF ()

    IF (NOT DEFINED Python_FIND_REGISTRY)
        SET(Python_FIND_REGISTRY "LAST")
    ENDIF ()
    IF (NOT DEFINED Python_FIND_FRAMEWORK)
        SET(Python_FIND_FRAMEWORK "LAST")
    ENDIF ()
    FIND_PACKAGE(Python REQUIRED COMPONENTS Interpreter Development)
    MESSAGE(STATUS "Python version: ${Python_VERSION}")
    MESSAGE(STATUS "Python library: ${Python_LIBRARIES}")
    MESSAGE(STATUS "Python include dirs: ${Python_INCLUDE_DIRS}")

    SET(PYTHON_EXECUTABLE ${Python_EXECUTABLE})
    ADD_DEFINITIONS(-DPYTHON_EXECUTABLE="${PYTHON_EXECUTABLE}")
    MESSAGE(STATUS "Python executable: ${PYTHON_EXECUTABLE}")
ENDIF ()


IF (DEFINED VISIBILITY_QUERY)
    MESSAGE(STATUS "Visibility query: ${VISIBILITY_QUERY}")
    IF (${VISIBILITY_QUERY} STREQUAL "TEV")
        ADD_DEFINITIONS(-DVISIBILITY_QUERY_TEV)
    ELSEIF (${VISIBILITY_QUERY} STREQUAL "RSV")
        ADD_DEFINITIONS(-DVISIBILITY_QUERY_RSV)
    ELSE ()
        MESSAGE(FATAL_ERROR "Visibility query not recognized")
    ENDIF ()
ELSE ()
    ADD_DEFINITIONS(-DVISIBILITY_QUERY_TEV)
ENDIF ()

IF (DEFINED TRACY_ENABLE)
    MESSAGE(STATUS "Tracy profiler: ${TRACY_ENABLE}")
    IF (${TRACY_ENABLE} STREQUAL "ON")
        ADD_DEFINITIONS(-DTRACY_ENABLE)
        INCLUDE("${PROJECT_SOURCE_DIR}/cmake/BuildTracy.cmake")
        OPTION ( TRACY_ENABLE "" ON )
        OPTION ( TRACY_ON_DEMAND "" ON )
        ADD_SUBDIRECTORY (extern/tracy)
        LIST(APPEND ALL_LIBRARIES Tracy::TracyClient)
    ENDIF ()
ENDIF()

OPTION(USE_IPOPT "Whether to use Ipopt to optimize rotations" OFF)
IF (USE_IPOPT)
    #Optimizer
    INCLUDE("${PROJECT_SOURCE_DIR}/cmake/FindIPOPT.cmake")
    IF (IPOPT_FOUND)
        ADD_DEFINITIONS(-DUSE_IPOPT)
        INCLUDE_DIRECTORIES(${IPOPT_INCLUDE_DIRS})
        MESSAGE(STATUS "Ipopt found")
    ELSE ()
        MESSAGE(FATAL_ERROR "Ipopt not found")
    ENDIF ()
ENDIF ()

INCLUDE("${PROJECT_SOURCE_DIR}/cmake/LoadLibs.cmake")

#THIRD PARTY HEADERS
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
MACRO(SEARCH_SOURCE NAME DIRPRJ)
    FILE(GLOB_RECURSE header${NAME} ${PROJECT_SOURCE_DIR}/${DIRPRJ}/*.h ${PROJECT_SOURCE_DIR}/${DIRPRJ}/*.hpp ${PROJECT_SOURCE_DIR}/${DIRPRJ}/*.hh)
    FILE(GLOB_RECURSE source${NAME} ${PROJECT_SOURCE_DIR}/${DIRPRJ}/*.cpp ${PROJECT_SOURCE_DIR}/${DIRPRJ}/*.cpp ${PROJECT_SOURCE_DIR}/${DIRPRJ}/*.cc ${PROJECT_SOURCE_DIR}/${DIRPRJ}/*.c)
ENDMACRO(SEARCH_SOURCE)

SEARCH_SOURCE(VisibilityGraph VisibilityGraph)
SEARCH_SOURCE(DynamicRVG DynamicVisibilityGraph) #dynamic RVG
SEARCH_SOURCE(Utils Utils)

IF (DEFINED OMPL_ENABLE)
    MESSAGE(STATUS "OMPL Comparison: ${OMPL_ENABLE}")
    IF (${OMPL_ENABLE} STREQUAL "ON")
        SEARCH_SOURCE(OMPL OMPL)
    ENDIF()
ENDIF()


#BUILD LIBRARY
ADD_LIBRARY(RotationalVisibilityGraph SHARED
        ${sourceVisibilityGraph} ${headerVisibilityGraph}
        ${sourceUtils} ${headerUtils}
        ${sourceDynamicRVG} ${headerDynamicRVG} #dynamic RVG
        ${sourceOMPL} ${headerOMPL}
        Python/utils.h
)

SET_TARGET_PROPERTIES(RotationalVisibilityGraph PROPERTIES PUBLIC_HEADER "${headerVisibilityGraph}")
TARGET_LINK_LIBRARIES(RotationalVisibilityGraph ${ALL_LIBRARIES})

OPTION(PYTHON_BINDINGS "Whether to build Python bindings" OFF)
IF (PYTHON_BINDINGS)
    #pybind11
    ADD_SUBDIRECTORY("extern/pybind11")
    SEARCH_SOURCE(Python Python)
    PYBIND11_ADD_MODULE(rvg SHARED ${sourcePython} ${headerPython})
    TARGET_LINK_LIBRARIES(rvg PRIVATE RotationalVisibilityGraph ${ALL_LIBRARIES})
ENDIF ()

#EXE
MACRO(ADD_EXE NAME)
    ADD_EXECUTABLE(${NAME} Main/${FOLDER}/${NAME}.cpp)
    TARGET_LINK_LIBRARIES(${NAME} RotationalVisibilityGraph gomp ${ALL_STATIC_LIBRARIES})
ENDMACRO(ADD_EXE)

MESSAGE(STATUS ${ALL_LIBRARIES})
MESSAGE(STATUS ${ALL_STATIC_LIBRARIES})

#DEBUG
SET(VGDEBUG ON)
SET(FOLDER VisibilityGraphDebug)
IF (VGDEBUG AND NOT PYTHON_BINDINGS)
    ADD_EXE(mainDebugVertex)
    ADD_EXE(mainDebugEdge)
    ADD_EXE(mainDebugPolygon)
    ADD_EXE(mainDebugMaximumInscribedCircle)
    ADD_EXE(mainDebugVisibility)
    ADD_EXE(mainDebugVisibility2)
    ADD_EXE(mainDebugVisibility3)
    ADD_EXE(mainDebugPolygonWithHoles)
    ADD_EXE(mainDebugMap)
    ADD_EXE(mainDebugGraph)
    ADD_EXE(mainDebugLayer)
    ADD_EXE(mainDebugVisibilityGraph)
    ADD_EXE(mainDebugJoin)
    ADD_EXE(mainDebugMinkowskiSum)
    ADD_EXE(mainDebugMinkowskiSum2)
    ADD_EXE(mainDebugMinkowskiSum3)
    ADD_EXE(mainDebugMinkowskiSum4)
    ADD_EXE(mainDebugMinkowskiSum5)
    ADD_EXE(mainDebugComplementJoin)
    ADD_EXE(mainDebugVertexSet)
    ADD_EXE(mainDebugIntersection)
    ADD_EXE(mainDebugOpenMP)
    ADD_EXE(mainDebugVertexIO)
    ADD_EXE(mainDebugPolygonIO)
    ADD_EXE(mainDebugMapGenerator)
    ADD_EXE(mainDebugReflexVertex)
    ADD_EXE(mainDebugConvexDecomposition)
    ADD_EXE(mainDebugVerticalDecomposition)
ENDIF (VGDEBUG AND NOT PYTHON_BINDINGS)

IF (DEFINED OMPL_ENABLE)
    MESSAGE(STATUS "OMPL Comparison: ${OMPL_ENABLE}")
    IF (${OMPL_ENABLE} STREQUAL "ON")
        SET(OMPL_DEBUG ON)
    ELSE()
        SET(OMPL_DEBUG OFF)
    ENDIF()
ENDIF()

SET(FOLDER OMPLDebug)
IF (OMPL_DEBUG AND NOT PYTHON_BINDINGS)
    ADD_EXE(mainDebugOMPL)
    ADD_EXE(mainDebugRRTStar)
ENDIF (OMPL_DEBUG AND NOT PYTHON_BINDINGS)

SET(EXPERIMENT ON)
SET(FOLDER Experiments)
IF (EXPERIMENT AND OMPL_DEBUG AND NOT PYTHON_BINDINGS)
    ADD_EXE(mainRVG_OMPL_Comparison)
    ADD_EXE(mainRVG_OMPL_ComparisonNarrowPassage)
    ADD_EXE(mainOMPLNarrowPassageTest)
    ADD_EXE(mainRVGConfigRun)
    ADD_EXE(mainOMPLConfigRun)
    ADD_EXE(mainMapGeneration)
    ADD_EXE(mainOMPLConvergenceTest)
    ADD_EXE(mainDrawMap)
    ADD_EXE(mainMultiQuery)
    ADD_EXE(mainWeights)
    ADD_EXE(mainDrawConvergence)
ENDIF (EXPERIMENT AND OMPL_DEBUG AND NOT PYTHON_BINDINGS)

IF (EXPERIMENT AND NOT PYTHON_BINDINGS)
    ADD_EXE(mainRVGConfigRun)
    ADD_EXE(mainDrawMap)
    ADD_EXE(mainWeights)
ENDIF (EXPERIMENT AND NOT PYTHON_BINDINGS)


SET(GENERAL_DEBUG OFF)
SET(FOLDER Debug)
IF (GENERAL_DEBUG AND NOT PYTHON_BINDINGS)
    ADD_EXE(mainTinyXMLDebug)
    ADD_EXE(mainCGALPolygonGenerationDebug)
    ADD_EXE(mainIpoptDebug)
    ADD_EXE(mainDebugOverlap)
    ADD_EXE(mainDebugAVX)
    ADD_EXE(mainDebugAVXPolygonChecking)
ENDIF (GENERAL_DEBUG AND NOT PYTHON_BINDINGS)

#dynamic rvg
SET(FOLDER DynamicRVG)
ADD_EXE(mainDebugScanVisibleArea)
ADD_EXE(mainDebugSingleIteration)
ADD_EXE(mainDebugFullPath)
ADD_EXE(mainDebugDynamicRVG)
